--- a/index.html
+++ b/index.html
@@ -15,10 +15,13 @@
       <div class="product-display">
         <div class="product-container">
           <div class="product-image">
+            <img :src="image">
+            
             <!-- image goes here -->
           </div>
           <div class="product-info">
             <h1>{{ product }}</h1>
+            <a :href="url">Made by Vue Mastery</a>
           </div>
         </div>
       </div>
